# Amadeus

./: .gitignore  CMakeLists.txt  src.canvas
client/helper/: pharser.cpp
client/src/: header.hpp  main.cpp
client/src/core/: client.cpp  client.hpp  user.cpp  user.hpp  utils.cpp  utils.hpp
client/src/log/: log.hpp
src/: main.cpp
src/core/: app.cpp  app.hpp  auth.cpp  auth.hpp  feature.cpp  feature.hpp
src/main/features/farming/: farming.cpp
src/utils/: common.hpp  parser.cpp
user_lists/: userlist.json
